syntax = "proto3";


message UploadRequest {
  string uid    = 1;
  string record = 2;
  string token  = 3;
}

message UploadResponse {
  string errorMsg     = 1;
  int32  responseCode = 2;
}

message SearchRequest {
  string uid          = 1;
  string searchString = 2;
  string token        = 3;
}

message SearchResponse {
  repeated string response = 1;
}

message LoginRequest {
  string uid      = 1;
  string password = 2;
}

message LoginResponse {
  int32  responseCode = 1;
  string token        = 2;
}

service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc Upload(UploadRequest) returns (UploadResponse);
  rpc Login(LoginRequest)   returns (LoginResponse);
}


message CertRequest {}
message CertEntry {
  string content = 1;
}

service CertService {
  rpc Cert(CertRequest) returns (CertEntry);
}



